Highlight `strong`; do not embolden Fix highlight in dark mode

--- a/assets/scss/typographical/_base.scss
+++ b/assets/scss/typographical/_base.scss
@@ -55,6 +55,10 @@ blockquote {
   margin: 0 2.5em;
 }
 
+strong {
+  font-weight: normal;
+}
+
 img {
   display: block;
   margin: 0 0 1rem;
