--- a/assets/scss/typographical/_tweaks.scss
+++ b/assets/scss/typographical/_tweaks.scss
@@ -96,7 +96,7 @@
 }
 
 // Hacks
-::selection {
+::selection, strong {
   background-color: $accent-color;
-  color: $default-color;
+  color: $base-color;
 }
