--- a/assets/scss/typographical/_variables.scss
+++ b/assets/scss/typographical/_variables.scss
@@ -2,6 +2,7 @@
 $dark-theme: "dark-theme";
 $light-theme: "light-theme";
 
+$base-color: #222;
 $default-color: "default-color";
 $default-background: "default-background";
 $default-tint: "default-tint";
